# ibsg

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.ini  conftest.py  defaults.json  docker-compose.yml  dtypes.json  filter_ber_private.py  filter_ber_private.spec  functional_tests.py  globals.py  ibsg.environment.dev.yml  ibsg.environment.yml  pyproject.toml  requirements.txt  sample-BERPublicsearch.txt  setup.cfg  setup.py  test_app.py  unit_tests.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
conda.recipe/: meta.yaml
ibsg/: __init__.py  __main__.py  _version.py  anonymise.py  archetype.py  ber.py  census.py  clean.py  cli.py  config.ini  defaults.json  defaults.py  dtypes.json  fetch.py  filter.py  gui.py  io.py  main.py  merge.py  postcodes.py  small_areas.py
tests/: conftest.py  test_app.py  test_archetype.py  test_census.py  test_clean.py  test_cli.py  test_fetch.py  test_filter.py  test_postcodes.py  test_small_areas.py
tests/data/: BERPublicsearch.parquet  SAPS2016_SA2017.csv  sample_building_ages_2016.parquet
tests/test_small_areas/: small_area_ids_2016.csv
