[tool.poetry]
name = "ibsg"
version = "0.1.0"
description = "Download & filter the BER Public search dataset"
authors = ["Rowan Molony <rowanmolony@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.2.0"
pandas = "^1.3.4"
requests = "^2.26.0"
stqdm = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
selenium = "^3.7"
responses = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
